# inewave

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MIGRATION.md  README.md  deploy-requirements.txt  dev-requirements.txt  fix_newave_types.py  fix_remaining.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  sg_execution_times.html  teste.txt
.github/workflows/: docs.yml  main.yml  publish.yml  release.yml
_downloads/0b69a7a5752bf5e8a109bdc6a471bb65/: plot_penalid.py
_downloads/0d734b2056690fd506e9e0263719cde0/: plot_sistema.ipynb
_downloads/14fc240ae6482b37da8e561ec85e8298/: plot_term.py
_downloads/1601e8e8d0b1d21268dd518925ae86c3/: plot_confhd.py
_downloads/1fbf3f6f613fdc91dc2eaec828104a03/: plot_hidr.ipynb
_downloads/23a45134ac68ec6797524081ead4b1f5/: plot_vazaof.ipynb
_downloads/28cc92bc5167613c87fed4163c191899/: plot_modif.ipynb
_downloads/3a502949f22a9595e4085ecc36b7a989/: plot_polinjus.ipynb
_downloads/41254531e31def3647d8accc3084e2ca/: plot_manutt.ipynb
_downloads/57995f5f735f084ddbf3bf957e9ce055/: plot_modif.py
_downloads/62f8e4c3f41ef252be375d78c87266ff/: plot_pmo.py
_downloads/6a38e911b65347d7a0f8491f8f88ad18/: plot_confhd.ipynb
_downloads/7900debd7097ed236b39d720eff5f35b/: plot_versionamento.py
_downloads/81b61bbc4d0f687ae21a61e36e5226a7/: plot_restricoes_eletricas.ipynb
_downloads/82b3535e6e9dc1bf39e6e27fbeae21c1/: plot_cortes.ipynb
_downloads/8b0ecf5bffc7fabc6c54b9ef214ffe46/: plot_versionamento.ipynb
_downloads/90f1ce19e79d8b82a9688e4e64c2579a/: plot_ree.py
_downloads/a93efbe5f88a6657e6533d78c65e1f79/: plot_forward.ipynb
_downloads/ae3b4a37bc5a47c4053e75d3f061388e/: plot_forward.py
_downloads/b76571d97560f8519493e13d475cce6a/: plot_term.ipynb
_downloads/c70553dddf8793067f4d76c542c5844f/: plot_patamar.ipynb
_downloads/cd934b5faf91a61b4cf7be8f4d1cf696/: plot_sistema.py
_downloads/d13390170c40e4a0e3b3a7084922d873/: plot_vazaof.py
_downloads/dd48ab4a288cf88a164d02bc96e8cdd6/: plot_restricoes_eletricas.py
_downloads/e4b0f794fef2125e04a2cce71dd34bd4/: plot_energiaf.py
_downloads/ed15a988add19ac4e12c8f6d277abf00/: plot_ree.ipynb
_downloads/ed37d83c8ff558869c975229df626e45/: plot_penalid.ipynb
_downloads/f268dbe090805212499c0f236a48465d/: plot_dger.ipynb
_downloads/f2cc74d11e0a2c4b2e118f8a2a094b46/: plot_cortes.py
_downloads/f67029f9c7f198724a1087cb8e8c69f9/: plot_energiaf.ipynb
_downloads/f8290fb6e4bc3ba3badedf5e29e14a1c/: plot_pmo.ipynb
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/apresentacao/: apresentacao.rst.txt
_sources/examples/: index.rst.txt  plot_confhd.rst.txt  plot_cortes.rst.txt  plot_dger.rst.txt  plot_energiaf.rst.txt  plot_forward.rst.txt  plot_hidr.rst.txt  plot_manutt.rst.txt  plot_modif.rst.txt  plot_patamar.rst.txt  plot_penalid.rst.txt  plot_pmo.rst.txt  plot_polinjus.rst.txt  plot_ree.rst.txt  plot_restricoes_eletricas.rst.txt  plot_sistema.rst.txt  plot_term.rst.txt  plot_vazaof.rst.txt  plot_versionamento.rst.txt  sg_execution_times.rst.txt
_sources/geral/: contribuicao.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
_static/js/: versions.js
apresentacao/: apresentacao.html
benchmarks/: README.md  bench_import.py  bench_read.py  benchmark_results.md  profile_read.py  profile_report.md  run_benchmarks.py
doc/source/: conf.py  index.rst  install.rst  reference.rst
docs/: .buildinfo  genindex.html  index.html  install.html  myfile.html  objects.inv  reference.html  search.html  searchindex.js  tutorial.html
docs/_modules/: index.html
docs/_sources/: index.md.txt  index.rst.txt  install.md.txt  myfile.md.txt  reference.md.txt  reference.rst.txt  tutorial.md.txt  tutorial.rst.txt
docs/_static/: documentation_options.js  language_data.js
docs/auto_examples/: index.html
docs/reference/: newave.html  nwlistcf.html  nwlistop.html
docs/source/: conf.py  index.rst  install.rst  reference.rst  tutorial.rst
docsrc/: Makefile  make.bat
docsrc/source/: conf.py  index.rst  reference.rst  tutorial.rst
examples/: README.txt  index.html  nwsddp.py  plot_confhd.html  plot_confhd.py  plot_cortes.html  plot_cortes.py  plot_dger.html  plot_dger.ipynb  plot_dger.py  plot_energiaf.html  plot_energiaf.py  plot_forward.html  plot_forward.py  plot_hidr.html  plot_hidr.py  plot_manutt.html  plot_manutt.py  plot_modif.html  plot_modif.ipynb  plot_modif.py  plot_patamar.html  plot_patamar.py  plot_penalid.html  plot_penalid.py  plot_pmo.html  plot_pmo.ipynb  plot_pmo.py  plot_polinjus.html  plot_polinjus.py  plot_ree.html  plot_restricoes_eletricas.html  plot_sistema.html  plot_sistema.ipynb  plot_sistema.py  plot_term.html  plot_term.py  plot_vazaof.html  plot_vazaof.py  plot_versionamento.html  (+2 more)
examples/libs/: polinjus.csv  restricao-eletrica.csv
examples/nwlistop/: cmarg001-med.out  cmarg001-med_v28.out
geral/: contribuicao.html  instalacao.html  tutorial.html
inewave/: __init__.py  config.py
inewave/_utils/: arquivo.py  bloco.py  blocobinario.py  dadosarquivo.py  escrita.py  escritabinario.py  escritablocos.py  escritaregistros.py  formatacao.py  leitura.py  leiturabinario.py  (+5 more)
(+2353 files in other folders)
