[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inewave"
dynamic = ["version"]
dependencies = [
    "cfinterface>=1.9.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "Pacote Python para manipulação dos arquivos de entrada e saída do NEWAVE"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = [
    "mypy",
    "pre-commit",
    "ruff",
]
docs = [
    "matplotlib",
    "numpydoc",
    "plotly",
    "sphinx",
    "sphinx-gallery",
    "furo",
]
dev = [
    "inewave[test,lint,docs]",
]

[project.urls]
Documentation = "https://rjmalves.github.io/inewave/"
Repository = "https://github.com/rjmalves/inewave/"

[tool.hatch.version]
path = "inewave/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "inewave/",
]

[tool.mypy]
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["inewave", "inewave.newave", "inewave.newave.*", "inewave.nwlistop", "inewave.nwlistop.*", "inewave.nwlistcf.*", "inewave._utils.*", "inewave.libs.*"]
strict = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:inewave.nwlistop",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
per-file-ignores = { "examples/*.py" = ["E402"] }
